--- a/package.xml
+++ b/package.xml
@@ -10,6 +10,8 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roslint</build_depend>
   <depend>roscpp</depend>
+  <depend>sensor_msgs</depend>
+  <depend>tf2</depend>
 
   <export>
   </export>
