--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
       - run:
           name: Update and install dependencies
           command: |
-            apt-get update
-            apt-get upgrade
+            apt-get update -y
+            apt-get upgrade -y
             rosdep install -y -i --from-paths .
       - run:
           name: catkin_make
