--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,15 @@ jobs:
       - run:
           name: Update and install dependencies
           command: |
+            sh -c 'echo "deb http://packages.ros.org/ros/ubuntu `lsb_release -sc` main" > /etc/apt/sources.list.d/ros-latest.list'
+            wget http://packages.ros.org/ros.key -O - | sudo apt-key add -
             apt-get update -y
             apt-get upgrade -y
+            apt-get install python-catkin-tools
             rosdep install -y -i --from-paths .
       - run:
           name: catkin_make
           command: |
             cd ~/catkin_ws
-            catkin_make_isolated
+            catkin init
+            catkin build --no-notify --no-status
