--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,14 @@
 version: 2.1
 executors:
   default:
-    working_directory: ~/catkin_ws/src/${CIRCLE_PROJECT_REPONAME}
+    working_directory: ~/catkin_ws/src/
     docker:
       - image: ros:kinetic-ros-core-xenial
 commands:
   ros-setup:
     steps:
-      - checkout
+      - checkout:
+          path: ${CIRCLE_PROJECT_REPONAME}
       - run:
           command: ls ~/catkin_ws/src
       - run:
