--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,7 @@
   <build_depend>roslint</build_depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
+  <depend>std_srvs</depend>
   <depend>tf2</depend>
 
   <export>
